force-app/main/default/objects/Club_and_Seasons__c/Club_and_Seasons__c.object-meta.xml
<CustomObject>
    <label>Club</label>
    <nameField>
        <label>Club Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Clubs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>