force-app/main/default/objects/Club_and_Seasons__c/fields/clubSeason__c.field-meta.xml
<CustomField>
    <fullName>clubSeason__c</fullName>
    <description>Season of LV Club</description>
    <label>Club Season</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>