force-app/main/default/objects/Club_and_Seasons__c/fields/clubSeasonEndDate__c.field-meta.xml
<CustomField>
    <fullName>clubSeasonEndDate__c</fullName>
    <description>End Date of LV Club Season</description>
    <label>Club Season End Date</label>
    <type>DateTime</type>
</CustomField>