force-app/main/default/objects/Club_and_Seasons__c/fields/clubSeasonStartDate__c.field-meta.xml
<CustomField>
    <fullName>clubSeasonStartDate__c</fullName>
    <description>Start Date of LV Club Season</description>
    <label>Club Season Start Date</label>
    <type>DateTime</type>
</CustomField>